<resources>
    <string name="app_name">Yamblz</string>
    <string name="content">Hello</string>
    <string name="add_column">Add column</string>
    <string name="remove_column">Remove column</string>
    <string name="menu_set_decoration">Set decoration</string>
    <string name="menu_set_30_columns">BOOM!</string>
    <string name="set_animation">Set animation</string>
    <string name="menu_boom_optimized">BOOM! Optimized</string>
</resources>
