<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add_column"
        android:icon="@drawable/ic_plus"
        android:title="@string/add_column"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_remove_column"
        android:icon="@drawable/ic_minus"
        android:title="@string/remove_column"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_change_style"
        android:title="@string/menu_set_decoration"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_set_animation"
        android:title="@string/set_animation"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_set_30_columns"
        android:title="@string/menu_set_30_columns"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_set_30_columns_optimized"
        app:showAsAction="never"
        android:title="@string/menu_boom_optimized" />
</menu>